# replication-packages

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: uo2009_01_mc_table1.ipynb
src/uo2009/dgp/: __init__.py  efficient_price.py  noise.py  params.py  sampling.py  simulate.py
src/uo2009/estimators/: __init__.py  statistics_cross_noise_dep.py  test_statistics.py
